[gd_scene load_steps=2 format=3 uid="uid://bpo5hd43mpuj8"]

[ext_resource type="Script" path="res://scripts/digits.gd" id="1_ujjut"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ujjut")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="New Network" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "New Network"

[node name="SaveButton" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Load"

[node name="TrainingAccuracyLabel" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Training: N/A"

[node name="TestingAccuracyLabel" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Testing: N/A"

[node name="EpochCompletionLabel" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Epoch: N/A"

[node name="NextButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Next"

[node name="TrainButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Train
"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PredictionLabel" type="RichTextLabel" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer2/New Network" to="." method="_on_new_network_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer2/SaveButton" to="." method="save_network"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer2/LoadButton" to="." method="load_network"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/NextButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/TrainButton" to="." method="_on_train_button_pressed"]
